--- a/src/less/reaktion.less
+++ b/src/less/reaktion.less
@@ -111,8 +111,12 @@
 		width:100%;
 		padding-top: 50px;
 
-		&.mobile-only > ul {
-			display: block;
+		&.mobile-only {
+			padding-top: 0;
+			> ul {
+				// override styles above as we don't want the hamburger
+				display: block;
+			}
 		}
 
 		ul {
