--- a/src/less/reaktion.less
+++ b/src/less/reaktion.less
@@ -9,6 +9,29 @@
 	font-size: 14px;
 	font-weight: 100;
 
+	> ul {
+		.lightenedUL(@navBackgroundColor, 0);
+	}
+	> ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 1);
+	}
+	> ul > li > ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 2);
+	}
+	> ul > li > ul > li > ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 3);
+	}
+	> ul > li > ul > li > ul > li > ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 4);
+	}
+	> ul > li > ul > li > ul > li > ul > li > ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 5);
+	}
+	> ul > li > ul > li > ul > li > ul > li > ul > li > ul > li > ul {
+		.lightenedUL(@navBackgroundColor, 6);
+	}
+
+
 	ul {
 		list-style: none;
 		padding: 0;
@@ -40,8 +63,6 @@
 				display:block;
 				color: @navTextColor;
 				padding:15px 20px;
-				background: @navBackgroundColor;
-				border-bottom:1px solid lighten(@navBackgroundColor, 5%);
 				text-decoration: none;
 			}
 
@@ -57,36 +78,8 @@
 					width: @subNavWidth;
 
 					a {
-						background: lighten(@navBackgroundColor, 5%);
-						border-bottom:1px solid lighten(@navBackgroundColor, 10%);
 						display:block;
 						padding:15px;
-
-						&:hover {
-							background: lighten(@navBackgroundColor, 10%);
-						}
-					}
-				}
-			}
-		}
-
-		li:hover {
-			a {
-				background: lighten(@navBackgroundColor, 5%);
-
-				&:hover {
-					background: lighten(@navBackgroundColor, 5%);
-				}
-			}
-
-			ul {
-				display:block;
-
-				a {
-					background: lighten(@navBackgroundColor, 5%);
-
-					&:hover {
-						background: lighten(@navBackgroundColor, 10%);
 					}
 				}
 			}
@@ -158,32 +151,27 @@
 				}
 			}
 
-			li:hover {
-				a {
-					background: @navBackgroundColor;
-					border-bottom:1px solid lighten(@navBackgroundColor, 10%);
-
-					&:hover {
-						background: lighten(@navBackgroundColor, 5%);
-					}
-				}
-
-				ul {
-					display:none;
-
-					a {
-						background: lighten(@navBackgroundColor, 5%);
-
-						&:hover {
-							background: lighten(@navBackgroundColor, 10%);
-						}
-					}
-				}
-			}
-		}
-
 		.nav-bars {
 			display:block;
 		}
 	}
 }
+
+
+.lightenedUL(@baseColor, @depth) {
+
+	@myBaseLinkColor: lighten(@baseColor, 5% * @depth);
+
+	> li > a {
+		background: @myBaseLinkColor;
+		border-bottom: 1px solid lighten(@myBaseLinkColor, 5%);
+
+		&:hover {
+			background: lighten(@baseColor, 5% * (@depth + 1));
+		}
+	}
+}
+
+
+
+
