Fixed SASS syntax, changed menu count to 12.

--- a/src/less/reaktion.less
+++ b/src/less/reaktion.less
@@ -2,8 +2,8 @@
 @navTextColor: #ffffff;
 @subNavWidth: 160px;
 
-// Generate 8 levels worth of shit.
-.generate-uls(8);
+// Generate 12 levels worth of menus.
+.generate-uls(12);
 .generate-uls(@n, @i: 0) when (@i =< @n) {
 	.reaktion-ul-@{i} {
 		.lightenedUL(@navBackgroundColor, @i);
