--- a/src/less/reaktion.scss
+++ b/src/less/reaktion.scss
@@ -2,15 +2,27 @@ $navBackgroundColor: #464646;
 $navTextColor: #ffffff;
 $subNavWidth: 160px;
 
-// Generate 8 levels worth of shit.
-@include generate-uls(8);
-@mixin generate-uls($n, $i: 0) when ($i =< $n)
+// Generate 12 levels worth of menus.
+$menuCount: 12;
+
+@mixin lightenedUL($baseColor, $depth)
 {
-	.reaktion-ul-${i} {
+	$myBaseLinkColor: lighten($baseColor, 5% * $depth);
+
+	> li > a {
+		background: $myBaseLinkColor;
+		border-bottom: 1px solid lighten($myBaseLinkColor, 5%);
+
+		&:hover {
+			background: lighten($baseColor, 5% * ($depth + 1));
+		}
+	}
+}
+$menu-slug: reaktion-ul- !default;
+@for $i from 0 through $menuCount {
+	.#{$menu-slug}#{$i} {
 		@include lightenedUL($navBackgroundColor, $i);
 	}
-
-	@include generate-uls($n, ($i + 1));
 }
 
 .nav {
@@ -145,23 +157,3 @@ $subNavWidth: 160px;
 		}
 	}
 }
-
-
-@mixin lightenedUL($baseColor, $depth)
-{
-
-	$myBaseLinkColor: lighten($baseColor, 5% * $depth);
-
-	> li > a {
-		background: $myBaseLinkColor;
-		border-bottom: 1px solid lighten($myBaseLinkColor, 5%);
-
-		&:hover {
-			background: lighten($baseColor, 5% * ($depth + 1));
-		}
-	}
-}
-
-
-
-
